<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        style="@style/BackgroundStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            style="@style/CardViewStyle">

            <RelativeLayout
                android:padding="@dimen/default_normal_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_credit_name"
                    style="@style/TextInputLayoutAuthStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:hint="@string/site_account_name"
                        style="@style/AuthEditTextFields"
                        android:id="@+id/site_account_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_credit_number"
                    android:layout_below="@id/input_credit_name"
                    style="@style/TextInputLayoutAuthStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:hint="@string/site_account_login"
                        style="@style/AuthEditTextFields"
                        android:id="@+id/site_account_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_credit_month"
                    android:layout_below="@id/input_credit_number"
                    style="@style/TextInputLayoutAuthStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:hint="@string/site_account_password"
                        style="@style/AuthEditTextFields"
                        android:id="@+id/site_account_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_credit_year"
                    android:layout_below="@id/input_credit_month"
                    style="@style/TextInputLayoutAuthStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:hint="@string/site_account_login"
                        style="@style/AuthEditTextFields"
                        android:id="@+id/site_account_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            style="@style/FABStyle"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</layout>